# full-harbor

./: .gitignore  README.md  harbor_commons.db  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
audits/: hyc_https___www_houstonyachtclub_com_hyc-staff.json  hyc_https___www_houstonyachtclub_com_mini-sailing-progrm.json  hyc_https___www_houstonyachtclub_com_summer-camps.json  hyc_https___www_houstonyachtclub_com_youth-program.json  lyc_https___www_lakewoodyachtclub_com_web_pages_learn-to-sail-su.json  lyc_https___www_lakewoodyachtclub_com_web_pages_opti-camp-2026.json  lyc_https___www_lakewoodyachtclub_com_web_pages_racing-teams-sum.json  lyc_https___www_lakewoodyachtclub_com_web_pages_youth-sailing1.json  tcyc_https___www_tcyc_org.json  tcyc_https___www_tcyc_org_contact.json  tcyc_https___www_tcyc_org_water_regattas.json
corpus/hyc/: corpus.jsonl
corpus/lyc/: corpus.jsonl
corpus/tcyc/: corpus.jsonl
docs/funders/: mozilla-democracy-ai-loi.md
docs/internal/: README.md  copilot-issues.md  mozilla_loi_march2025_draft.md
docs/research/: audit-results-march-2026.txt  quiet-yield-methodology.md
scripts/: ingest_empathetic_dialogues.py  ingest_social_chemistry.py
tools/: seed_demo.py
