[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "full-harbor"
version = "0.1.0"
description = "Build once. Deploy everywhere. Shared AI infrastructure for sailing clubs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.hatch.workspace]
members = [
    "packages/ask-a-sailor",
    "packages/harbor-commons",
    "packages/club-auditor",
    "packages/club-steward",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
